# NuitrackJava

./: README.md
NuitrackJavaWrapper/: .gitignore  pom.xml
NuitrackJavaWrapper/jni/: CMakeLists.txt  readme.md  toolchain-mingw32-windows.cmake  update_native_headers.py
NuitrackJavaWrapper/jni/include/: NuitrackJavaWrapperTypes.h  NuitrackJavaWrapper_Native_NuitrackImport.h  NuitrackJavaWrapper_Native_NuitrackImport_DepthFrame_CAPI.h  NuitrackJavaWrapper_Native_NuitrackImport_DepthSensor_CAPI.h  NuitrackJavaWrapper_Native_NuitrackImport_Nuitrack_CAPI.h  NuitrackJavaWrapper_NuitrackImport.h  NuitrackTypeConvertor.h
NuitrackJavaWrapper/jni/src/: NuitrackJavaWrapper_Native_NuitrackImport.cpp  NuitrackJavaWrapper_Native_NuitrackImport_DepthFrame_CAPI.cpp  NuitrackJavaWrapper_Native_NuitrackImport_DepthSensor_CAPI.cpp  NuitrackJavaWrapper_Native_NuitrackImport_Nuitrack_CAPI.cpp  NuitrackJavaWrapper_NuitrackImport.c
NuitrackJavaWrapper/src/main/java/: TestMain.java
NuitrackJavaWrapper/src/main/java/NuitrackJavaWrapper/: Nuitrack.java  NuitrackImport.java  TestMain.java
NuitrackJavaWrapper/src/main/java/NuitrackJavaWrapper/Modules/: DepthSensor.java  NuitrackModule.java
NuitrackJavaWrapper/src/main/java/NuitrackJavaWrapper/Native/: ChangeableObject.java  NuitrackImport.java
NuitrackJavaWrapper/src/main/java/NuitrackJavaWrapper/Types/: Disposable.java  NuitrackException.java  OutputMode.java  Vector3.java
NuitrackJavaWrapper/src/main/java/NuitrackJavaWrapper/Utils/: CallbackInterface.java  (+3 more)
NuitrackJavaWrapper/src/test/java/NuitrackJavaWrapper/: NuitrackTest.java
(+29 files in other folders)
